--- a/index.qmd
+++ b/index.qmd
@@ -2,6 +2,4 @@
 title: "website_test"
 ---
 
-This is a Quarto website.
-
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
+This is Eikes Test QUarto website
