--- a/about.qmd
+++ b/about.qmd
@@ -1,5 +1,12 @@
 ---
-title: "About"
+title: "Test Website"
+image: images/profile.png
+about:
+  template: trestles
+  links:
+    - icon: github
+      text: Github
+      href: https://github.com/Eikes-Organization/website_test/
 ---
 
-About this site
+Testing out possibilities
