--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,14 @@
 ---
-title: "website_test"
+listing:
+  contents: "software_pages/*/index.qmd"
+  feed: true
+  sort: "date desc"
+  type: grid
+  categories: true
+  sort-ui: true
+  filter-ui: true
+  image-placeholder: images/image-placeholder.png
+  fields: [image, date, title, description]
+page-layout: full
+title-block-banner: true
 ---
-
-This is Eikes Test QUarto website
