--- a/software_pages/SHIRE/index.qmd
+++ b/software_pages/SHIRE/index.qmd
@@ -6,3 +6,4 @@ image: "featured.png"
 image-alt: "SHIRE (Susceptibility Hazard mappIng fRamEwork) is a tool to facilitate and streamline landslide susceptibility and hazard mapping using a Random Forest classifier."
 ---
 
+![](SHIRE_poster_try-1.pdf){width=100%}
