--- a/software_pages/PSimPy/index.qmd
+++ b/software_pages/PSimPy/index.qmd
@@ -6,3 +6,5 @@ image: "featured.png"
 image-alt: "PSimPy (Predictive and probabilistic simulation with Python) implements a Gaussian process emulation-based framework that enables systematic and efficient investigation of uncertainties associated with physics-based models (i.e. simulators)."
 ---
 
+
+![](poster-PSimPy.pdf){width=200% height=950px}
