--- a/software_pages/bryne/index.qmd
+++ b/software_pages/bryne/index.qmd
@@ -5,3 +5,6 @@ categories: [MBD,FEM]
 image: "featured.png"
 image-alt: "Bryne is a python framework to build coupled multiphysics FEM models. It also facilitates the creation of reproducible simulation setups by storing the full human-readable simulation setups with the results."
 ---
+
+
+![](poster-bryne.pdf){width=200% height=950px}
